--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    <a [routerLink]="['']">Home</a>
+    <a [routerLink]="[UrlConstants.private.index.url]">Home</a>
     <a [routerLink]="[UrlConstants.private.index.about.url]">About</a>
     <a [routerLink]="[UrlConstants.private.index.users.url]">Users</a>
   </nav>
